Make slots horizontal on mobile devices

--- a/api-version/index.html
+++ b/api-version/index.html
@@ -473,29 +473,79 @@
             }
 
             .slot-machine {
-                padding: 20px;
+                padding: 10px;
             }
 
             .slots-container {
-                grid-template-columns: 1fr;
+                grid-template-columns: repeat(3, 1fr);
+                gap: 10px;
+            }
+
+            .slot {
+                padding: 10px;
+                min-height: 300px;
+            }
+
+            .slot-number {
+                width: 25px;
+                height: 25px;
+                font-size: 0.9rem;
+            }
+
+            .food-image {
+                height: 120px;
+            }
+
+            .food-name {
+                font-size: 1rem;
+            }
+
+            .food-category {
+                font-size: 0.7rem;
+                padding: 3px 8px;
+            }
+
+            .food-description {
+                font-size: 0.8rem;
+                margin-bottom: 10px;
+            }
+
+            .food-price {
+                font-size: 1rem;
+            }
+
+            .food-restaurant {
+                font-size: 0.75rem;
+            }
+
+            .stars {
+                margin: 5px 0;
+            }
+
+            .star {
+                font-size: 0.8rem;
             }
 
             .spin-button {
-                padding: 15px 40px;
-                font-size: 1.2rem;
+                padding: 15px 30px;
+                font-size: 1rem;
             }
 
             .celebration-box {
-                padding: 40px;
-                margin: 20px;
+                padding: 30px 20px;
+                margin: 10px;
             }
 
             .celebration-box h2 {
-                font-size: 2.5rem;
+                font-size: 2rem;
             }
 
             .celebration-box p {
-                font-size: 1.5rem;
+                font-size: 1.2rem;
+            }
+
+            .celebration-box .free-lunch {
+                font-size: 2rem;
             }
         }
     </style>
